// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingListEntry renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderBottomColor": "#d9dfe3",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 14,
    }
  }
  testID="shopping-list-entry-1"
>
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Default Shopping List
      </Text>
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            [
              {
                "fontSize": 12,
                "marginTop": 2,
              },
              {
                "color": "#515960",
              },
            ],
          ]
        }
      >
        3/15/2023
      </Text>
    </View>
    <Text
      style={
        [
          {
            "color": "#0e171e",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          [
            {
              "fontSize": 13,
              "marginLeft": 12,
            },
            {
              "color": "#515960",
            },
          ],
        ]
      }
    >
      2
      /
      5
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "marginTop": 8,
          "overflow": "hidden",
        },
        {
          "backgroundColor": "#d9dfe3",
        },
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#026fd7",
          "flex": 2,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "#bc5e00",
          "flex": 3,
        }
      }
    />
  </View>
</View>
`;

exports[`ShoppingListEntry renders correctly without counts 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderBottomColor": "#d9dfe3",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 14,
    }
  }
  testID="shopping-list-entry-1"
>
  <View
    style={
      {
        "alignItems": "baseline",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "fontWeight": "600",
              "lineHeight": 24,
            },
            undefined,
          ]
        }
      >
        Default Shopping List
      </Text>
      <Text
        style={
          [
            {
              "color": "#0e171e",
            },
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            [
              {
                "fontSize": 12,
                "marginTop": 2,
              },
              {
                "color": "#515960",
              },
            ],
          ]
        }
      >
        3/15/2023
      </Text>
    </View>
  </View>
</View>
`;
